PostfixNotationComplexExpressionBuilder_IntegrationTest